2005-02-09  Mark McLoughlin  <markmc@redhat.com>

	* lib/config.py.in: add path to sabayon-session.
	
	* admin-tool/profilesdialog.py: use it.

2005-02-09  Mark McLoughlin  <markmc@redhat.com>

	* lib/Makefile.am,
	  lib/config.py.in: sabayon-monitor is currently
	installed in sbindir, not bindir.

2005-02-09  Mark McLoughlin  <markmc@redhat.com>

	* admin-tool/sabayon-session.py: import os module.

2005-02-09  Mark McLoughlin  <markmc@redhat.com>

	* lib/protosession.py:
	(open_x_connection): absolutely horrendous hack to
	have a child process hold open a dummy X connection
	on Xnest.
	(main): remove - its been moved to sabayon-session.
	
	* lib/config.py.in: upd for admin-tool renaming.

2005-02-09  Mark McLoughlin  <markmc@redhat.com>

	* lib/Makefile.am: add protosession.py

2005-02-09  Mark McLoughlin  <markmc@redhat.com>

	* admin-tool/Makefile.am: add sabayon-monitor and
	sabayon-session.
	
	* admin-tool/profilesdialog.py:
	(edit_button_clicked): run sabayon session since
	ProtoSession has problems if there's an existing
	X display already open.
	(create_new_profile): temporary hack to make the profile
	writable by the prototype user. Will fix soon.
	
	* admin-tool/sabayon-monitor.in,
	  admin-tool/sabayon-monitor.py: re-name sabayon to
	sabayon-monitor.
	
	* admin-tool/sabayon-session.in,
	  admin-tool/sabayon-session.py: script to run a
	prototype session.
	
	* admin-tool/sabayon.py: launch the profiles editor
	from here.
	
	* admin-tool/profilesdialog.in: remove

Tue Feb  8 17:12:02 CET 2005 Daniel Veillard <veillard@redhat.com>

	* admin-tool/.cvsignore admin-tool/Makefile.am
	  admin-tool/profilesdialog.in: adding a wrapper shell for
	  profilesdialog too

2005-02-08  Mark McLoughlin  <markmc@redhat.com>

	* lib/sources/Makefile.am: s/testmodule.py/testsource.py/

Tue Feb  8 11:51:19 CET 2005 Daniel Veillard <veillard@redhat.com>

	* lib/dirmonitor.py: ignore (End)Exists events since we scan
	  the tree ourselves, works only with gamin >= 0.0.23
